# ats-threadpool

./: .drone.yml  .gitignore  CMakeLists.txt  Makefile  README.md  ats-threadpool.hats  conanfile.py  package-lock.json  package.json
src/: ats-threadpool.hats
src/DATS/: concurrent_queue.dats  threadpool.dats
src/HATS/: includes.hats
src/SATS/: concurrent_queue.sats  threadpool.sats
tests/: CMakeLists.txt  Makefile  conanfile.py  main.dats  tests.dats
